# mygeopy

./: .gitignore  LICENSE.txt  pyproject.toml  triangle.py
.github/workflows/: test.yml
mygeopy/: triangle.py
tests/: test_triangle.py
